--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.23.12",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
+    "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.9.1",
